--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@
   overflow: hidden;
 }
 .container {
+  width: 100%;
   max-width: 1158px;
   padding-left: 15px;
   padding-right: 15px;
@@ -106,20 +107,45 @@ section {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--navy-blue);
+}
+
+.header-item-link {
   padding-top: 24px;
   padding-bottom: 24px;
+  display: inline-block;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--navy-blue);
+  position: relative;
 }
-.header-item:hover,
-.header-item:focus {
+
+.header-item-link:hover::after,
+.header-item-link:hover::after {
+  content: "";
+  width: 100%;
+  height: 4px;
+  position: absolute;
+  background-color: var(--ocean);
+  left: 0;
+  bottom: 0;
+  border-radius: 2px;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-item-link:hover,
+.header-item-link:focus {
   color: var(--ocean);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-contact-list {
   display: flex;
   gap: 40px;
 }
-.header-contact-item {
-}
+
 .header-contact-link {
   padding-top: 24px;
   padding-bottom: 24px;
@@ -133,11 +159,25 @@ section {
 .header-contact-link:hover,
 .header-contact-link:focus {
   color: var(--ocean);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* -------------------HERO---------------- */
+
 .hero {
   background-color: var(--navy-blue);
-  padding: 188px 472px;
+  padding: 188px 0; /* только сверху и снизу */
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-bg-min.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .hero-title {
   max-width: 496px;
@@ -175,6 +215,8 @@ section {
 .hero-btn:hover,
 .hero-btn:focus {
   background-color: var(--ocean);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* -------------------BENEFITS---------------- */
 .benefits {
