--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,16 @@ section {
   align-items: center;
   gap: 24px;
 }
+.benefits-icon {
+  border: 1px solid var(--light-slate);
+  border-radius: 4px;
+  width: 264px;
+  height: 112px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 8px;
+}
 .benefits-item {
   flex-basis: calc((100% - 72px) / 4);
 }
@@ -271,7 +281,7 @@ section {
   justify-content: space-between;
   align-items: center;
   gap: 24px;
-  /* max-width: 1128px; */
+  padding-bottom: 32px;
   margin-left: auto;
   margin-right: auto;
   flex-wrap: wrap;
@@ -303,6 +313,26 @@ section {
   letter-spacing: 0.02em;
   text-align: center;
   color: var(--slate);
+  margin-bottom: 8px;
+}
+.team-soc-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+}
+.team-soc-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--iris);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.team-soc-item:hover,
+.team-soc-item:focus {
+  background-color: var(--ocean);
 }
 /* -------------------GALLERY---------------- */
 .gallery {
@@ -327,7 +357,10 @@ section {
   gap: 24px;
   flex-wrap: wrap;
 }
-.gallery-item {
+.gallery-item:hover,
+.gallery-item:focus {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 .gallery-item-card {
   flex-basis: calc((100% - 72px) / 4);
@@ -363,7 +396,19 @@ section {
   text-align: start;
   background-color: var(--navy-blue);
 }
-.footer-logo {
+.footer-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.footer-text-group {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-right: 120px;
+}
+.footer-text-group .footer-logo {
   display: inline-block;
   margin-bottom: 16px;
 
@@ -384,4 +429,33 @@ section {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--cloud);
+}
+.footer-soc {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.footer-soc-title {
+  margin-bottom: 16px;
+
+  align-items: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--white);
+}
+
+.footer-soc-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--iris);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.footer-soc-item:hover,
+.footer-soc-item:focus {
+  background-color: #31d0aa;
 }
