--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,10 @@ section {
   padding-bottom: 120px;
   padding-top: 120px;
 }
+img {
+  max-width: 100%;
+  height: auto;
+}
 /* -------------------HEADER---------------- */
 .header .container {
   display: flex;
@@ -352,31 +356,51 @@ section {
 }
 .gallery-list {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  gap: 24px;
   flex-wrap: wrap;
+  gap: 40px 19px;
+}
+.gallery-item {
+  width: calc((100% - 48px) / 3);
+}
+.gallery-text-group {
+  position: relative;
+  overflow: hidden;
+  width: 360px;
+  height: 300px;
+}
+.cover-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding-top: 40px;
+  padding-left: 32px;
+  padding-right: 32px;
+  background-color: var(--iris);
+  transform: translateY(100%);
+  transition: transform 300ms ease;
 }
 .gallery-item:hover,
 .gallery-item:focus {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
-.gallery-item-card {
-  flex-basis: calc((100% - 72px) / 4);
+.gallery-item:hover .cover-text,
+.gallery-item:focus .cover-text {
+  transform: translateY(0);
+  transition: transform 300ms ease;
 }
-.gallery-text-group {
-  padding-bottom: 32px;
-  padding-top: 32px;
-
+.text-bottom {
   border-bottom: 1px solid var(--cornflower);
   border-left: 1px solid var(--cornflower);
   border-right: 1px solid var(--cornflower);
   padding: 32px 16px;
 }
+
 .gallery-card-title {
   margin-bottom: 8px;
-
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
